welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:14: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:35: error: identifier expected but '}' found.
}
^