welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
    while (!estSurBiscuit) {
    	if (isFacingTrail(c)) { 
    		avance(c)
    		baisseBrosse(c)
    		leveBrosse(c)
    	}
    	else { droite(c) }
    }
    prendBiscuit()
}

def isFacingTrail(c):Boolean = {
	var a:Boolean = false
	if ( estFaceMur() == false ) { 
		avance() 
		if (getCouleurSol() == c ) {
			a = true
		}
		else { a = false }
		recule()
		if ( a == true ) { return true}
		else { return false}
	}
	else { return false }
}       



